<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (c) 2019 Cisco and/or its affiliates.
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at:

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
   limitations under the License.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HiPingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/hiping_hicn_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:inputType="text"
                    android:text="@string/hiping_hicn_name" />

                <EditText
                    android:id="@+id/hiping_hicn_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hiping_expand_textview"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:elevation="6dp"
                        android:foreground="?selectableItemBackground"
                        android:padding="16dp"
                        android:text="More Options" />

                    <LinearLayout
                        android:id="@+id/hiping_expand_linearview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_button"
                        android:clickable="true"
                        android:descendantFocusability="blocksDescendants"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/arrow" />
                    </LinearLayout>
                </LinearLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/hiping_expandable_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="right|center_vertical"
                                android:text="@string/hiping_source_port" />

                            <EditText
                                android:id="@+id/hiping_source_port_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:singleLine="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="right|center_vertical"
                                android:text="@string/hiping_destination_port" />

                            <EditText
                                android:id="@+id/hiping_destination_port_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:singleLine="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="right|center_vertical"
                                android:text="@string/hiping_ttl" />

                            <EditText
                                android:id="@+id/hiping_ttl_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:singleLine="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="right|center_vertical"
                                android:text="@string/hiping_ping_interval" />

                            <EditText
                                android:id="@+id/hiping_ping_interval_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:singleLine="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="right|center_vertical"
                                android:text="@string/hiping_max_pings" />

                            <EditText
                                android:id="@+id/hiping_max_pings_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:singleLine="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="right|center_vertical"
                                android:text="@string/hiping_lifetime" />

                            <EditText
                                android:id="@+id/hiping_lifetime_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:singleLine="true" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10pt"
                            android:layout_marginTop="10pt">

                            <CheckBox
                                android:id="@+id/hiping_open_tcp_connection_checkbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:text="@string/hiping_open_tcp_connection" />

                            <CheckBox
                                android:id="@+id/hiping_send_syn_message_checkbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:text="@string/hiping_send_syn_message" />

                            <CheckBox
                                android:id="@+id/hiping_send_ack_message_checkbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|center_vertical"
                                android:text="@string/hiping_send_ack_message" />
                        </LinearLayout>
                    </LinearLayout>
                </net.cachapa.expandablelayout.ExpandableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/hiping_start_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/hiping_start_button"
                    android:textColor="#FFFFFFFF" />

                <Button
                    android:id="@+id/hiping_stop_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:enabled="false"
                    android:text="@string/hiping_stop_button"
                    android:textColor="#FFFFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/hiping_time_linechart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/seekBar1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/hiping_log_scrollview"
                    android:layout_width="fill_parent"
                    android:layout_height="400dp"
                    android:background="@drawable/border">

                    <EditText
                        android:id="@+id/hiping_log_edittext"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:inputType="none"
                        app:layout_constraintVertical_bias="0.33999997" />
                </android.support.v4.widget.NestedScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <CheckBox
                    android:id="@+id/hiping_log_autoscroll_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hiping_autoscroll" />

                <Button
                    android:id="@+id/hiping_reset_log_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/hiping_cancel_log_button"
                    android:textColor="#FFFFFFFF" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>