<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (c) 2019 Cisco and/or its affiliates.
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at:

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
   limitations under the License.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HiGetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:inputType="text"
                    android:text="@string/higet_url" />

                <EditText
                    android:id="@+id/higet_url_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/higet_download_path_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="right|center_vertical"
                        android:inputType="text"
                        android:text="@string/higet_downlaod_path" />

                    <EditText
                        android:id="@+id/higet_downlaod_path_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/higet_download_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/higet_download_button"
                    android:textColor="#FFFFFFFF" />

                <Button
                    android:id="@+id/higet_stop_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:enabled="false"
                    android:text="@string/higet_stop_button"
                    android:textColor="#FFFFFFFF" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/higet_resume"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/higet_results_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>